[package]
name = "kanari-crypto"
edition = "2024"                                                                                                   # Use Rust 2024 edition.
categories = ["development-tools"]                                                                                 # Categorize as development tools on crates.io.
keywords = ["blockchain", "sdk", "move", "rust", "ifps", "storage", "wallet", "crypto"]                            # Keywords for crates.io search.
homepage = "https://kanari.network"                                                                                # Project homepage.
documentation = "https://docs.kanari.network"                                                                      # Link to project documentation.
version = "0.1.5"                                                                                                  # Current version of the SDK.
authors = ["Kanari Network"]                                                                                       # Authors of the SDK.
license = "Apache-2.0"                                                                                             # License information.
repository = "https://github.com/kanari-network/kanari-crypto"                                                     # Link to the code repository.
description = "Kanari Network SDK"                                                                                 # Short description of the SDK.

[dependencies]
bip39 = "2.2.2"
# Core crypto libraries
k256 = { version = "0.13.4", features = ["ecdsa", "std"] }
p256 = { version = "0.13.2", features = ["ecdsa", "std"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha3 = "0.10.8"
zstd = "0.13.3"
hmac = "0.12.1"

# Post-Quantum Cryptography (PQC) - NIST Standards
pqcrypto-dilithium = { version = "0.5.0", optional = true } # Post-quantum signatures
# pqcrypto-kyber = { = "1", optional = true }       # Post-quantum key encapsulation
pqcrypto-sphincsplus = { version = "0.7.2", optional = true } # Hash-based signatures (ultra-secure)
pqcrypto-traits = { version = "0.3.5", optional = true }      # Common traits for PQC

# Make blake3 optional and enabled via the blake3 feature
blake3 = { version = "1.8.3", optional = true }

# BIP32/BIP44 HD wallet support
bip32 = "0.5.3"

rand = "0.8.5"
hex = "0.4.3"
serde_json = { version = "1.0.149", default-features = true }
lazy_static = "1.5.0"
toml = "0.9.8"
log = "0.4.29"
serde = "1.0.228"
thiserror = "2.0.18"
argon2 = "0.5.3"
base64 = "0.22.1"
aes-gcm = "0.10.3"

# Memory security
zeroize = "1.8.2"
fs2 = "0.4.3"

# Time handling for audit logging
chrono = { version = "0.4.44" }

# Add common dependency
kanari-common = { git = "https://github.com/kanari-network/kanari-sdk.git", branch = "kanari-sdk" }
move-core-types = { git = "https://github.com/kanari-network/kanari-sdk.git", branch = "kanari-sdk" }

[dev-dependencies]
tempfile = { version = "3.26.0"}

[features]
# keep blake3 optional in Cargo.toml but enable it in the crate default features
default = ["blake3", "pqc"]
# Enable optional PQC crates when `pqc` feature is activated
pqc = [
	# "pqcrypto-kyber",
	"pqcrypto-traits",
	"pqcrypto-dilithium",
	"pqcrypto-sphincsplus",
]
hybrid = ["pqc"] # Hybrid classical + PQC schemes
